--- a/SchoolBusWXWeb/Views/Shared/_SchoolBusLayout.cshtml
+++ b/SchoolBusWXWeb/Views/Shared/_SchoolBusLayout.cshtml
@@ -10,6 +10,7 @@
     <link href="~/lib/mui/css/mui.min.css" rel="stylesheet" />
     <link href="~/font/iconfont.css" rel="stylesheet" />
     <link href="~/css/main.css" rel="stylesheet" />
+    <link href="~/css/jquery.confirm-1.1.css" rel="stylesheet" />
     <title>@ViewBag.Title</title>
     @RenderSection("Css", false)
 </head>
@@ -20,6 +21,7 @@
     <script src="~/lib/mui/js/mui.picker.all.js"></script>
     <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
     <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
+    <script src="~/js/jquery.confirm-1.1.js"></script>
     <script src="~/js/base.js"></script>
     <script src="~/js/tools.js" asp-append-version="true"></script>
     <script src="@(this.Context.Request.Scheme)://res2.wx.qq.com/open/js/jweixin-1.4.0.js"></script>
