--- a/SchoolBusWXWeb/Views/SchoolBus/GoCalendar.cshtml
+++ b/SchoolBusWXWeb/Views/SchoolBus/GoCalendar.cshtml
@@ -9,6 +9,9 @@
     body {
         margin-bottom: 50px
     }
+    [v-cloak] {
+         display: none;
+     }
 </style>
 }
 <div class="calendar" id="calendar"></div>
@@ -70,10 +73,12 @@
             },
             beforeChange: function (value, date, endDate) {  // 渲染日期前设置mark
                 getDayAttendanceInfo(value);
+                $("#vue").show();
                 this.mark = marks;
             },
             change: function (value, date) {//日期时间被切换后的回调
                 getDayAttendanceInfo(value);
+                $("#vue").show();
                 vue.cardDate = date.month + '月' + date.date + '号'; // 打卡日期赋值
             }
         });
@@ -103,7 +108,6 @@
                 if (data.status === 1) {
                     marks = data.monthMark;         // 月mark赋值
                     vue.cardLogList = data.dayList; // 打卡信息列表赋值
-                    console.log(marks);
                 }
             }
         });
