修改首页提示

--- a/SchoolBusWXWeb/Views/SchoolBus/Index.cshtml
+++ b/SchoolBusWXWeb/Views/SchoolBus/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     Layout = "~/Views/Shared/_SchoolBusLayout.cshtml";
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "鲸卫士";
 }
 @model SchoolBusWXWeb.Models.ViewData.IndexModel
 
