添加网站图标

--- a/SchoolBusWXWeb/Views/Shared/_SchoolBusLayout.cshtml
+++ b/SchoolBusWXWeb/Views/Shared/_SchoolBusLayout.cshtml
@@ -11,6 +11,7 @@
     <link href="~/font/iconfont.css" rel="stylesheet" />
     <link href="~/css/main.css" rel="stylesheet" />
     <link href="~/css/jquery.confirm-1.1.css" rel="stylesheet" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <title>@ViewBag.Title</title>
     @RenderSection("Css", false)
 </head>
